# Test_Stand

./: .gitignore  AbstractVFD.h  CMakeLists.txt  README.md  abstractvfd.h  error.cpp  error.h  errorlogger.cpp  errorlogger.h  fixedpointnumber.cpp  fixedpointnumber.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  modbusrtusettingsdialog.cpp  modbusrtusettingsdialog.h  modbusrtusettingsdialog.ui  serialsettings.cpp  serialsettings.h  serialsettings.ui  serialsettingsdialog.cpp  serialsettingsdialog.h  serialsettingsdialog.ui  unicovfd.cpp  unicovfd.h  unicovfdconfigdialog.cpp  unicovfdconfigdialog.h  unicovfdconfigdialog.ui
interfaces/: ilogger.h  ivfd.h
